# kowainik.github.io

./: .gitignore  .travis.yml  404.html  README.md  atom.xml  cabal.project  cabal.project.freeze  index.html  kowainik-site.cabal  posts.html  projects.html  rss.xml  site.hs  stack.yaml  team.json  website.cabal
.github/workflows/: ci.yml
app/: Main.hs
books/: do-pure-haskell-interview.html
css/: book.css  default.css  font-awesome.css  magnific-popup.css  main.css  post.css
js/: hide.js  main.js  post.js  stars.js
posts/: 2018-06-21-haskell-build-tools.html  2018-06-21-haskell-build-tools.md  2018-07-11-typere-map-step-by-step.html  2018-07-11-typere-map-step-by-step.md  2018-07-11-typerep-map-step-by-step.html  2018-07-11-typerep-map-step-by-step.md  2018-08-19-picnic-put-containers-into-a-backpack.html  2018-08-19-picnic-put-containers-into-a-backpack.md  2018-09-09-dhall-to-hlint.html  2018-09-09-dhall-to-hlint.md  2018-09-25-co-log.html  2018-09-25-co-log.md  2018-10-01-hacktoberfest.html  2018-10-01-hacktoberfest.md  2018-11-01-hacktoberfest-wrap-up.html  2018-11-01-hacktoberfest-wrap-up.md  2018-11-18-state-pattern-matching.html  2018-11-18-state-pattern-matching.md  2019-01-14-tomland.html  2019-01-14-tomland.md  2019-02-06-style-guide.html  2019-02-06-style-guide.md  2019-07-23-membrain.md  2019-09-25-gsoc2019.md  2020-01-29-policeman-bristol.md  2020-05-10-extensions.md  2020-08-17-haskell-mini-patterns.md  2020-09-21-deriving.md  2020-11-01-hacktoberfest2020.md  2020-12-07-haddock-tips.md  2020-12-13-naming-conventions.md  2021-02-21-totality.md  2021-03-01-arrows-zoo.md  2021-03-24-internal-functions.md  2021-05-24-fixity.md  arrows-zoo.html  deriving.html  extensions.html  fixity.html  gsoc2019.html  (+8 more)
posts-raw/: 2018-06-21-haskell-build-tools.md  2018-07-11-typerep-map-step-by-step.md  2018-08-19-picnic-put-containers-into-a-backpack.md  2018-09-25-co-log.md  2018-10-01-hacktoberfest.md  2018-11-01-hacktoberfest-wrap-up.md  2018-11-18-state-pattern-matching.md  2019-01-14-tomland.md
projects/: amicabal.html  app-version.html  autopack.html  awesome-cabal.html  awesome-haskell-sponsorship.html  cabal-full.html  cake-slayer.html  co-log.html  colourista.html  containers-backpack.html  crocodealer.html  eio.html  extensions.html  first-class-patterns.html  github-graphql.html  hakyll-shortcut-links.html  hash-store.html  hintman-target.html  hintman.html  hit-off.html  hit-on.html  homebrew-tap.html  idris-patricia.html  ilist.html  issue-wanted.html  kowainik.github.io.html  learn4haskell.html  life-sync.html  membrain.html  mysql-not-so-simple.html  org.html  outdator.html  piece-of-cake-slayer.html  policeman.html  ppa.html  prolens.html  relude.html  seaweed.html  shellmet.html  shortcut-links.html  (+18 more)
projects/stan/: report.html
scripts/: deploy.sh
src/: Kowainik.hs
src/Kowainik/: Download.hs  Feed.hs  Nav.hs  Post.hs  Project.hs  Readme.hs  Social.hs  StyleGuide.hs  Team.hs
tags/: GADT.html  GADTs.html  GHC.html  PVP.html  TOML.html  backpack.html  build-tools.html  cabal.html  comonad.html  containers.html  contravariant.html  data structure.html  dependent types.html  deriving.html  dhall.html  documentation.html  fp.html  gsoc.html  guide.html  hacktoberfest.html  haskell.html  hlint.html  library.html  logging.html  patterns.html  prelude.html  profunctor.html  stack.html  state.html  tool.html  transformers.html  tutorial.html  typerep.html
team/: creators.json  volunteers.json
templates/: 404.html  footer.html  haskell-interview-book.html  main.html  nav.html  post.html  posts-default.html  posts.html  project.html  readme.html  readmes.html  status.html  subscribe.html  tag.html  team.html
