cabal-version:         2.4
name:                  kowainik-site
version:               0.1.0.0
synopsis:              Kowainik website
description:           Kowainik website
homepage:              https://github.com/kowainik/kowainik.github.io
bug-reports:           https://github.com/kowainik/kowainik.github.io/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Kowainik
maintainer:            xrom.xkov@gmail.com
copyright:             2018-2019 Kowainik
category:              Web
build-type:            Simple
extra-doc-files:       README.md
tested-with:           GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/kowainik.github.io.git

common common-options
  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src

  exposed-modules:     Kowainik.Feed
                       Kowainik.Project
                       Kowainik.Readme
                       Kowainik.Social
                       Kowainik.StyleGuide
                       Kowainik.Team
                       Prelude

  build-depends:       aeson
                     , bytestring
                     , directory
                     , filepath
                     , hakyll ^>= 4.12.5.1
                     , http-client
                     , http-client-tls
                     , http-types
                     , text


executable site
  import:              common-options
  main-is:             site.hs

  build-depends:       hakyll
                     , kowainik-site
                     , pandoc
                     , pandoc-types
                     , text

  ghc-options:        -threaded