cabal-version:         2.4
name:                  kowainik-site
version:               0.1.0.0
synopsis:              Kowainik website
description:           Kowainik website
homepage:              https://github.com/kowainik/kowainik.github.io
bug-reports:           https://github.com/kowainik/kowainik.github.io/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Kowainik
maintainer:            Kowainik <xrom.xkov@gmail.com>
copyright:             2018-2020 Kowainik
category:              Web
build-type:            Simple
extra-doc-files:       README.md
tested-with:           GHC == 8.8.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/kowainik.github.io.git

common common-options
  build-depends:       base-noprelude ^>= 4.13.0.0
                     , relude ^>= 0.6.0.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields
                       -Wmissing-export-lists
                       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Kowainik
                         Kowainik.Feed
                         Kowainik.Project
                         Kowainik.Readme
                         Kowainik.Social
                         Kowainik.StyleGuide
                         Kowainik.Team
                       Prelude

  build-depends:       aeson
                     , bytestring
                     , directory
                     , filepath
                     , hakyll ^>= 4.13
                     , hakyll-shortcut-links ^>= 0.1.0.0
                     , http-client
                     , http-client-tls
                     , http-types
                     , pandoc >= 2.9
                     , pandoc-types
                     , text

executable site
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       kowainik-site
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
