name:                  website
version:               0.1.0.0
build-type:            Simple
cabal-version:         >= 1.10

library
  hs-source-dirs:      src

  exposed-modules:     Kowainik.Project
                       Kowainik.Readme
                       Kowainik.Social
                       Kowainik.Team

  build-depends:       base
                     , aeson >= 1.2
                     , bytestring >= 0.10
                     , hakyll
                     , http-client >= 0.5
                     , http-client-tls >= 0.3
                     , http-types >= 0.12
                     , text >= 1.2

  ghc-options:         -Wall

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

executable site
  main-is:          site.hs

  build-depends:       base == 4.*
                     , website
                     , hakyll

  ghc-options:        -Wall -threaded

  default-language:   Haskell2010
  default-extensions: OverloadedStrings
