cabal-version:         2.0
name:                  website
version:               0.1.0.0
build-type:            Simple

library
  hs-source-dirs:      src

  exposed-modules:     Kowainik.Post
                       Kowainik.Project
                       Kowainik.Readme
                       Kowainik.Social
                       Kowainik.Team
                       Prelude

  build-depends:       base-noprelude >= 4.11.1.0 && < 5
                     , aeson ^>= 1.3.1.1
                     , bytestring ^>= 0.10.8.2
                     , directory ^>= 1.3.1.5
                     , filepath ^>= 1.4.2
                     , hakyll ^>= 4.12.3.0
                     , http-client ^>= 0.5.13.1
                     , http-client-tls ^>= 0.3.5.3
                     , http-types ^>= 0.12.1
                     , relude ^>= 0.3.0
                     , text ^>= 1.2.3.0

  ghc-options:         -Wall

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

executable site
  main-is:          site.hs

  build-depends:       base-noprelude
                     , hakyll
                     , relude
                     , text
                     , website

  ghc-options:        -Wall -threaded

  default-language:   Haskell2010
  default-extensions: OverloadedStrings
